--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,11 @@
 	Quam architecto placeat velit veniam perspiciatis non corporis aliquid deleniti officiis tenetur voluptatem voluptatibus, pariatur iusto temporibus excepturi? Dolore repellendus dolorem doloremque, ea nesciunt optio alias fugiat aliquid modi sit.
 	Aspernatur, et consectetur excepturi amet ipsa corporis, ad qui, praesentium beatae corrupti deleniti accusamus ex ut exercitationem repellat ipsam! Ea facilis quis cupiditate obcaecati at molestias deleniti itaque ab nesciunt.
 	Facere quidem consectetur officia delectus quibusdam fugit quis, dolorem suscipit repellendus aliquam minus alias sit, accusamus non eius possimus consequatur enim! Explicabo nesciunt sed exercitationem porro in excepturi iusto eos?
-	Eius tempore quisquam ea eligendi veritatis animi odio exercitationem officia non, facere sunt quod laboriosam natus, quis eaque vel? Qui ullam quis animi iste ducimus neque eaque perspiciatis eius error.</p>
+	Eius tempore quisquam ea eligendi veritatis animi odio exercitationem officia non, facere sunt quod laboriosam natus, quis eaque vel? Qui ullam quis animi iste ducimus neque eaque perspiciatis eius error.
+	</p>
+
+	<section> <button>click me</button> </section>
+	<section> <button>click me</button> </section>
+	<section> <button>click me</button> </section>
 </body>
 </html>
