such html much css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,75 +5,77 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
 	<title>This is FRONTEND</title>
 </head>
 <body>
-	<section id="button">
+	
+
+	<section class="background-holder" id="welcome">
+		<img src="https://lh3.googleusercontent.com/pw/AM-JKLW31t9VcKr8o6nAwa2fDc37MHu7ssjZDjzDmgnPvyVmccpAoIir2UbhSztu2H5xlt9JxEJRVahlgAGYRgoHqnB2gBXm8ynJYsAxu8BTxdea_4saNHdc2umRopC7LB4ZZjNi1UUk_HueVC7Txo_v65vmaA=w1250-h937-no?authuser=0" alt="kepecske">
+		
 		<button>Click Me</button>
+		
+		<h1>Szerintem így szép</h1>
 	</section>
 
-	<section id="form">
+	<section id="about">
+		<article>
+			<h2>Nagyonfasza</h2>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis, dicta adipisci molestiae excepturi non soluta, voluptatibus reprehenderit quos ab, nulla est. Neque reprehenderit doloribus expedita tempora cupiditate odit numquam dicta.
+			Obcaecati, saepe. Similique excepturi voluptatum quos doloribus neque eligendi delectus dicta incidunt eum laboriosam, praesentium dolorum velit deserunt laborum esse cupiditate minima sapiente quam sed asperiores rerum dolor nemo quae.
+			Dicta dolor accusamus, amet magni corporis exercitationem perspiciatis ea commodi a ex quaerat placeat sint dignissimos beatae minima vero, deserunt omnis optio enim voluptate eum quidem facilis non delectus. Libero.
+			Temporibus, tenetur maiores! Deleniti quo dolore expedita hic quae aliquam totam eaque inventore similique alias amet ratione reiciendis dignissimos nostrum pariatur blanditiis, officiis consectetur, tenetur architecto. Corporis iure inventore consequatur.
+			Error odio eligendi accusantium sapiente rerum ratione saepe odit, voluptate dolorem placeat officia corrupti qui, tempora eaque hic quidem reprehenderit nisi voluptas totam labore commodi! Eius assumenda tenetur fuga quos?
+			Saepe minus veritatis est, velit in vero impedit at minima iste. Officiis libero ratione ipsum, atque alias modi veniam quos est iste itaque culpa a sunt laudantium debitis molestiae pariatur!
+			Nisi aut quis omnis aspernatur dolore quo perferendis accusantium, suscipit autem magni, ipsum praesentium, est ipsa deserunt! Tenetur ipsam, at laudantium veritatis, sit fugiat exercitationem similique, autem harum vitae dolorem.
+			Dolorum unde doloremque obcaecati repellat blanditiis tempora, alias quaerat ad sunt molestias sit assumenda ducimus hic nam modi nulla temporibus! Omnis atque placeat porro aspernatur quas nobis laborum facilis ea!
+			Eveniet repudiandae, perferendis earum nulla porro voluptas illo, molestias provident dicta minus veritatis, inventore velit unde rem cumque ipsam in eos natus ut quasi vero. Error expedita numquam cumque inventore!
+			Nisi, quaerat at cupiditate recusandae ab, qui nihil dolore aliquam natus asperiores libero rerum accusamus enim officia reiciendis obcaecati eum tenetur? Ea inventore, architecto sint non illo ullam aliquid fugit!</p>
+		</article>
+	</section>
+
+	<section id="services" class="container">
+		<ul>
+			<li>
+				<h2>Service 1</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur blanditiis eveniet corrupti. Consectetur obcaecati repellendus dolores accusantium! Voluptas dolorum ipsum cumque vero, quis voluptatem quaerat pariatur placeat quia, labore deserunt?</p>
+			</li>
+			<li>
+				<h2>Service 2</h2>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem dolore voluptates numquam ipsa sint, atque optio tempore, minima praesentium blanditiis asperiores, et laborum dolor magnam perspiciatis! Nulla expedita pariatur debitis.</p>
+			</li>
+			<li>
+				<h2>Service 3</h2>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint expedita error nobis dolor, earum, fugit possimus molestiae numquam, dolores tenetur provident! Atque dignissimos minus soluta quod voluptas, maxime deleniti quis?</p>
+			</li>
+			<li>
+				<h2>Service 4</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sed, debitis suscipit ab quasi beatae pariatur deserunt sunt eius omnis! Sed dolorem iure corrupti inventore. Maxime vero impedit harum porro.</p>
+			</li>
+			<li>
+				<h2>Service 5</h2>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum facere debitis natus vitae culpa provident, nihil necessitatibus dicta tempora quidem. Sequi officia debitis corporis maiores ex et perferendis natus! Cum.</p>
+			</li>
+			<li>
+				<h2>Service 6</h2>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto repellendus obcaecati in eos vel consectetur, autem aspernatur praesentium adipisci labore, voluptatibus ratione assumenda dolore doloribus et exercitationem velit vero culpa!
+				Quasi, ratione iste dolore blanditiis cum excepturi suscipit quam esse quibusdam quod repellendus repudiandae quisquam veritatis dolores aliquam, saepe accusantium deserunt dignissimos nam? Maxime repellendus amet perspiciatis nostrum adipisci recusandae.</p>
+			</li>
+		</ul>
+
+	</section>
+
+	<section id="contact">
 		<form>
-			<input type="text" id="box">
-			<input type="text" id="box">
+			<label for="username">Username</label><br>
+			<input type="text" id="username" placeholder="username" required><br>
+			<label for="password">Password</label><br>
+			<input type="text" id="password" placeholder="password" required><br>
+			<button>Sign In</button>
 		</form>
 	</section>
 
-	<section id="paragraph">
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis, dicta adipisci molestiae excepturi non soluta, voluptatibus reprehenderit quos ab, nulla est. Neque reprehenderit doloribus expedita tempora cupiditate odit numquam dicta.
-		Obcaecati, saepe. Similique excepturi voluptatum quos doloribus neque eligendi delectus dicta incidunt eum laboriosam, praesentium dolorum velit deserunt laborum esse cupiditate minima sapiente quam sed asperiores rerum dolor nemo quae.
-		Dicta dolor accusamus, amet magni corporis exercitationem perspiciatis ea commodi a ex quaerat placeat sint dignissimos beatae minima vero, deserunt omnis optio enim voluptate eum quidem facilis non delectus. Libero.
-		Temporibus, tenetur maiores! Deleniti quo dolore expedita hic quae aliquam totam eaque inventore similique alias amet ratione reiciendis dignissimos nostrum pariatur blanditiis, officiis consectetur, tenetur architecto. Corporis iure inventore consequatur.
-		Error odio eligendi accusantium sapiente rerum ratione saepe odit, voluptate dolorem placeat officia corrupti qui, tempora eaque hic quidem reprehenderit nisi voluptas totam labore commodi! Eius assumenda tenetur fuga quos?
-		Saepe minus veritatis est, velit in vero impedit at minima iste. Officiis libero ratione ipsum, atque alias modi veniam quos est iste itaque culpa a sunt laudantium debitis molestiae pariatur!
-		Nisi aut quis omnis aspernatur dolore quo perferendis accusantium, suscipit autem magni, ipsum praesentium, est ipsa deserunt! Tenetur ipsam, at laudantium veritatis, sit fugiat exercitationem similique, autem harum vitae dolorem.
-		Dolorum unde doloremque obcaecati repellat blanditiis tempora, alias quaerat ad sunt molestias sit assumenda ducimus hic nam modi nulla temporibus! Omnis atque placeat porro aspernatur quas nobis laborum facilis ea!
-		Eveniet repudiandae, perferendis earum nulla porro voluptas illo, molestias provident dicta minus veritatis, inventore velit unde rem cumque ipsam in eos natus ut quasi vero. Error expedita numquam cumque inventore!
-		Nisi, quaerat at cupiditate recusandae ab, qui nihil dolore aliquam natus asperiores libero rerum accusamus enim officia reiciendis obcaecati eum tenetur? Ea inventore, architecto sint non illo ullam aliquid fugit!
-		Asperiores illum quo consectetur et, assumenda in voluptatum expedita consequuntur pariatur nesciunt dignissimos dolore blanditiis cum officiis recusandae quasi sint aut modi quis quia? Quis deserunt similique suscipit exercitationem incidunt?
-		Aspernatur, dolorum? Necessitatibus distinctio nisi praesentium quo earum deleniti vitae! Repudiandae, commodi? Quod necessitatibus quisquam, eligendi officiis, fugiat laudantium recusandae accusantium perferendis voluptas adipisci quos eum molestiae sint saepe? Doloremque.
-		Placeat quod ea, unde accusamus eaque magnam perspiciatis nihil cupiditate? Voluptate omnis, quae aspernatur voluptates est eius velit consequuntur officia impedit porro, eveniet in deserunt architecto doloremque ipsa! Dolorum, voluptatem.
-		Rem mollitia a voluptas distinctio sint? Facilis vitae error eligendi aliquam unde quae officiis odit sed, reiciendis natus est labore expedita quia quisquam aspernatur debitis. Doloribus officia corrupti voluptatem placeat.
-		Tenetur obcaecati, nulla beatae porro quos natus, voluptatem quae, perspiciatis atque dolorem ab unde quidem aperiam sunt ipsam laborum? Velit, ipsa autem illo ullam incidunt nostrum saepe nesciunt at temporibus.
-		Debitis ex soluta voluptatibus autem in neque incidunt placeat fugiat magni minus ut quia eaque labore perspiciatis, blanditiis eos deleniti est pariatur ipsam nesciunt temporibus! Dignissimos eaque magnam labore illum.
-		Et quia, incidunt libero corrupti, hic amet excepturi a obcaecati architecto ea asperiores! Repudiandae, labore fugit eum ea, itaque quo sed sequi molestias esse cupiditate obcaecati suscipit sint quidem aperiam?
-		Tempora perferendis reprehenderit perspiciatis eaque molestiae. Culpa, a eos beatae ducimus labore numquam aperiam tempore fuga ipsam maxime eum pariatur! Autem aliquid esse culpa debitis, hic ut facilis dolore id!
-		Suscipit, earum assumenda ut obcaecati ipsa iste! Quisquam vitae maxime vero ex alias impedit sed facilis dolorum quae aliquam expedita, libero eveniet dicta reiciendis quo quaerat tenetur perspiciatis aliquid fugiat!
-		Officiis sed odit, tenetur animi quisquam quibusdam omnis esse assumenda hic inventore neque ut at eligendi nihil ipsum explicabo! Maiores sunt dicta explicabo, dolor veniam unde itaque nesciunt culpa temporibus.
-		Totam sint possimus cupiditate fugit animi id harum magnam ullam magni recusandae minus corporis a maiores, rem quos laudantium, eaque quas dolorem dolore quisquam qui exercitationem. Doloremque dignissimos dicta esse!
-		Nihil veritatis quisquam optio, enim ad hic asperiores illum alias eveniet, provident nulla, assumenda eaque explicabo aspernatur ut maxime iure quo accusantium sint? In voluptatum iste culpa, quos iure corporis.
-		Quos, quod. Odio beatae itaque ipsum debitis nobis! Pariatur error eum est? Nisi doloremque officiis fugiat neque reprehenderit. Fugiat amet accusamus a similique laudantium dignissimos rem asperiores molestias! Veniam, aut?
-		Mollitia beatae tenetur dolores? Omnis magni eveniet officiis veritatis magnam nobis veniam ipsa id at! Quas beatae doloribus, inventore repellat totam perferendis esse veniam omnis autem doloremque consequatur eum cumque.
-		Id iusto labore neque soluta fugit reiciendis? Nulla illum, quaerat ad quasi numquam, nostrum earum, cum accusamus quidem a laudantium possimus. Officia, ex quidem cumque illo cum quibusdam temporibus repudiandae.
-		Aspernatur nam dolore eveniet cum velit, iusto vero molestias autem in voluptates, temporibus voluptate, ducimus totam quisquam impedit consectetur officia tempora. Repudiandae vitae aut dolorum aliquid incidunt facilis animi earum?
-		Modi odio aliquid asperiores ullam mollitia harum neque sint quibusdam? Sunt deleniti dicta nostrum optio, distinctio ut! Unde quae ad deserunt, nulla enim officiis minus architecto, inventore consequatur expedita odio.
-		Temporibus, nulla voluptatem! Est quaerat maxime labore dolor iste qui aliquam aperiam amet veritatis ducimus dolore, quis fuga mollitia, ea excepturi accusamus vitae deserunt tempore in commodi! Quibusdam, nostrum sapiente.
-		Commodi eveniet ullam eos ex ab modi nihil voluptatum neque odio aut mollitia vitae perferendis reprehenderit, nisi quibusdam exercitationem, deserunt beatae impedit corrupti ut, velit eligendi. Cum consectetur beatae reiciendis!
-		Illo ex sint deserunt voluptatem error provident repellendus explicabo enim molestias nihil, nostrum ad temporibus rerum, ipsum fugiat corporis blanditiis vitae, praesentium et nisi? Mollitia aliquid laudantium libero cumque soluta.
-		Recusandae, cupiditate deleniti incidunt aperiam excepturi dolor corrupti esse aliquam facilis eveniet molestiae? Laudantium veritatis dolores pariatur at ipsam. Suscipit totam porro, consequuntur corrupti eaque doloribus recusandae possimus! Delectus, eum!
-		Omnis voluptas consequuntur ut tenetur repellat! Consectetur consequatur accusantium amet, dicta magnam voluptates omnis corporis. Consequuntur architecto dolorum quae accusantium porro accusamus quam nihil numquam ad, mollitia, magni debitis amet.
-		Magni explicabo numquam tempora quis odit! Culpa velit sint neque animi, modi dolores ex numquam enim aspernatur. Cum labore, quae sed quod, dolor nobis ea neque fugit perspiciatis ab rem!
-		Ab aperiam recusandae rem natus consectetur nisi voluptatibus libero consequatur nostrum tenetur enim, itaque nihil. Labore nisi, molestiae, molestias ipsam adipisci sapiente ratione cupiditate distinctio quidem, nostrum modi ut eos.
-		Odit cumque fugiat accusamus nostrum amet excepturi velit et vero repudiandae nesciunt, dolorem eaque enim iure hic soluta similique harum, quisquam ipsum saepe? Dolor accusamus labore iusto, iste officiis enim!
-		Magnam ipsa rerum alias omnis explicabo architecto cumque assumenda illo perferendis dolorem quasi repellendus ipsum doloribus fugit, molestiae distinctio maiores dignissimos provident, perspiciatis ullam minus recusandae. Corporis aliquid dolore error.
-		Optio pariatur molestias nobis voluptates quaerat vitae amet, adipisci libero, nisi eos eum suscipit harum. Cupiditate similique assumenda vitae doloremque non, blanditiis debitis corporis repellendus! Consectetur incidunt quod animi fuga.
-		Maiores animi laudantium, placeat ut cupiditate dolores ipsa natus molestias praesentium illo beatae minus repellat voluptatem ad consequatur perferendis, alias quis earum, deleniti aliquam architecto? Quia reiciendis autem quam ipsam!
-		Enim omnis pariatur nisi repellat animi necessitatibus explicabo natus laboriosam veritatis magni impedit nulla neque reprehenderit provident quidem quam iure, temporibus libero magnam fuga reiciendis totam quasi. Commodi, adipisci ullam.
-		Ducimus necessitatibus facilis aliquid corporis, asperiores aspernatur doloremque aut voluptatem. Rem quod beatae assumenda consequatur dolores ipsum et culpa consequuntur fuga libero praesentium unde cupiditate dolor, quidem doloribus at sequi.
-		Sequi ab architecto ducimus dolorum, officia fugiat molestiae inventore non illum dolore quas dignissimos blanditiis, omnis possimus accusamus voluptas, explicabo voluptate nihil reiciendis quis maiores quidem? Soluta eligendi dolor nulla?
-		Doloremque optio nisi dolore, eveniet alias similique, aut animi quia consequatur deserunt nam officia vel. Id alias et pariatur praesentium, quos rem totam delectus aliquam excepturi quis dolore in amet?
-		Odio id tempora voluptatem voluptatibus accusamus. Natus, qui ipsa! Nesciunt, illum hic animi quos voluptates quisquam consectetur tempora officiis cupiditate aliquid earum eaque dolore natus repellat doloremque labore! Ut, nobis?
-		Recusandae repudiandae repellendus quod. Minus facilis mollitia officiis, tenetur perspiciatis ipsa ducimus quidem quos impedit, voluptas obcaecati cumque quam, praesentium accusantium repellendus perferendis porro vitae amet ea saepe unde a!
-		Odio, quo nihil expedita dolores quasi aut voluptatibus quod atque veniam nemo quae nisi. At mollitia voluptatem sequi voluptate laboriosam adipisci consequuntur illum! Natus amet consequatur, recusandae excepturi provident numquam.
-		Consectetur nisi, provident accusamus iste quam quas porro minima velit atque eligendi fugit quos. Repudiandae tenetur neque quo, quae dolore distinctio sit, ut rem omnis explicabo ratione earum, fugiat in!
-		Repellat at facilis necessitatibus, soluta provident, adipisci laudantium ullam aut in veniam pariatur natus. Harum architecto exercitationem voluptate dolores, voluptas autem inventore nobis porro ad odit. Voluptate iusto ab delectus.
-		Inventore exercitationem repudiandae in beatae harum ipsa, fuga iusto nisi itaque repellat dolore hic autem quam commodi saepe odio fugiat amet eum. Iste, explicabo vel. Praesentium suscipit alias eius consequatur.
-		Nostrum dicta culpa exercitationem omnis et molestiae cumque animi nihil sapiente, tempora ex laudantium sed voluptatum dolorum distinctio dolore illum cum! Nobis minus commodi quidem impedit temporibus unde, perspiciatis labore!
-		Suscipit ducimus enim commodi quas natus! Sapiente maiores expedita alias odit voluptatem voluptates pariatur illum aut non veritatis labore nemo debitis odio eligendi vitae, aspernatur exercitationem fugit officiis voluptatibus rerum?</p>
-	</section>
-
-	<section class="background-holder">
-		<img src="https://lh3.googleusercontent.com/pw/AM-JKLW31t9VcKr8o6nAwa2fDc37MHu7ssjZDjzDmgnPvyVmccpAoIir2UbhSztu2H5xlt9JxEJRVahlgAGYRgoHqnB2gBXm8ynJYsAxu8BTxdea_4saNHdc2umRopC7LB4ZZjNi1UUk_HueVC7Txo_v65vmaA=w1250-h937-no?authuser=0" alt="kepecske">
-	</section>
+	
 </body>
 </html>
