it went beautiful

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,33 +5,41 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
 	<title>This is FRONTEND</title>
 </head>
 <body>
 	
 
 	<section class="background-holder" id="welcome">
-		<img src="https://lh3.googleusercontent.com/pw/AM-JKLW31t9VcKr8o6nAwa2fDc37MHu7ssjZDjzDmgnPvyVmccpAoIir2UbhSztu2H5xlt9JxEJRVahlgAGYRgoHqnB2gBXm8ynJYsAxu8BTxdea_4saNHdc2umRopC7LB4ZZjNi1UUk_HueVC7Txo_v65vmaA=w1250-h937-no?authuser=0" alt="kepecske">
+		<img src="https://lh3.googleusercontent.com/2mMVdNegxFr4WiHgu2kG0Hq2HridukrVRbEeLqjAmFJ9RH0RGZnaf_yW09CuA2j1ryxRJuXTBtmcHUYjMMwTNJMD12dgR_WU_oVxLDLd0MtgouJzepN4HYQBs1JDg4-JCrOkeFFMPno=w2400" alt="kepecske">
 		
-		<button>Click Me</button>
+		<button>Te vagy</button>
 		
-		<h1>Szerintem így szép</h1>
+		<h1>Abécé</h1>
 	</section>
 
 	<section id="about">
 		<article>
-			<h2>Nagyonfasza</h2>
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis, dicta adipisci molestiae excepturi non soluta, voluptatibus reprehenderit quos ab, nulla est. Neque reprehenderit doloribus expedita tempora cupiditate odit numquam dicta.
-			Obcaecati, saepe. Similique excepturi voluptatum quos doloribus neque eligendi delectus dicta incidunt eum laboriosam, praesentium dolorum velit deserunt laborum esse cupiditate minima sapiente quam sed asperiores rerum dolor nemo quae.
-			Dicta dolor accusamus, amet magni corporis exercitationem perspiciatis ea commodi a ex quaerat placeat sint dignissimos beatae minima vero, deserunt omnis optio enim voluptate eum quidem facilis non delectus. Libero.
-			Temporibus, tenetur maiores! Deleniti quo dolore expedita hic quae aliquam totam eaque inventore similique alias amet ratione reiciendis dignissimos nostrum pariatur blanditiis, officiis consectetur, tenetur architecto. Corporis iure inventore consequatur.
-			Error odio eligendi accusantium sapiente rerum ratione saepe odit, voluptate dolorem placeat officia corrupti qui, tempora eaque hic quidem reprehenderit nisi voluptas totam labore commodi! Eius assumenda tenetur fuga quos?
-			Saepe minus veritatis est, velit in vero impedit at minima iste. Officiis libero ratione ipsum, atque alias modi veniam quos est iste itaque culpa a sunt laudantium debitis molestiae pariatur!
-			Nisi aut quis omnis aspernatur dolore quo perferendis accusantium, suscipit autem magni, ipsum praesentium, est ipsa deserunt! Tenetur ipsam, at laudantium veritatis, sit fugiat exercitationem similique, autem harum vitae dolorem.
-			Dolorum unde doloremque obcaecati repellat blanditiis tempora, alias quaerat ad sunt molestias sit assumenda ducimus hic nam modi nulla temporibus! Omnis atque placeat porro aspernatur quas nobis laborum facilis ea!
-			Eveniet repudiandae, perferendis earum nulla porro voluptas illo, molestias provident dicta minus veritatis, inventore velit unde rem cumque ipsam in eos natus ut quasi vero. Error expedita numquam cumque inventore!
-			Nisi, quaerat at cupiditate recusandae ab, qui nihil dolore aliquam natus asperiores libero rerum accusamus enim officia reiciendis obcaecati eum tenetur? Ea inventore, architecto sint non illo ullam aliquid fugit!</p>
+			<h2>Te vagy</h2>
+			<p>Ki tudja,<br>
+				talán csak te meg én,<br>
+				Mi vagyunk,<br>
+				kiket egy utcába terelnek <br>
+				és ahogy lennie kell: egymásra találunk. <br>
+				Hogyha tehetném engedném,<br>
+				szorítanám örökké a kezed de,<br>
+				mint minden ez is múlik: <br>
+				csak várom hogy az idő mikor telik le. <br>
+				Te lennél akiért bármivel, <br>
+				és hogyha együtt: semmi nem tud fékezni, <br>
+				mégis egyszer kisétálsz, <br>
+				és már hányszor sétáltatok ki. <br>
+				Várom ki lesz a párom, <br>
+				a zene, a város, barát, testvér? <br>
+				aki mögöttem: csak ez, <br>
+				ami a világon valamit is ér. <br>
+			</p>
 		</article>
 	</section>
 
